<resources>
    <string name="app_name">AppBarApplication</string>
    <string name="hint">Введите вашу заметку</string>
    <string name="note">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="payment_information">Информация об оплате</string>
    <string name="payment_value">Денег к оплате</string>
    <string name="withBankCard">С банковской карты</string>
    <string name="withMobileDeposit">С мобильного телефона</string>
    <string name="withReadyCash">Наличными по адресу</string>
    <string name="OK">OK</string>
    <string name="author_name">Arsen Minnullin</string>
    <string name="surname">Фамилия</string>
    <string name="firstname">Отчество</string>
    <string name="name">Имя</string>
    <string name="age">Возраст</string>
    <string name="date">Дата измерений</string>
    <string name="up_pressure">Верхняя граница</string>
    <string name="down_pressure">Нижняя граница</string>
    <string name="pressure_mon">К показателям давления</string>
    <string name="health_mon">К показателям здоровья</string>
    <string name="card_client">На главный экран</string>
    <string name="pulse">Пульс</string>
    <string name="takihordia">Такихордия</string>
    <string name="weigth">Вес</string>
    <string name="steps">Шаги</string>
    <string name="ok_but">OK</string>
    <string name="title_date_begin">Дата начала задачи: %1$s</string>
    <string name="title_date_end">Дата окончания задачи: %1$s</string>
    <string name="title_date_begin_empty">Дата начала задачи:</string>
    <string name="title_date_end_empty">Дата окончания задачи:</string>
    <string name="err">Ошибка</string>
    <string name="toast_msg">старт:  %1$s, окончаниe: %2$s</string>
    <string name="forward">Вперёд</string>
    <string name="back">Назад</string>
    <string name="userName">Имя пользователя</string>
    <string name="userMail">Email</string>
    <string name="ok">ok</string>
    <string name="clear">Очистить</string>
    <string name="defaultUserName">Елена</string>
    <string name="defaultEmail">Eleba@ggl.com</string>
    <string name="not_mario"> its me Arsen!</string>
</resources>
